--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -3,6 +3,10 @@
     "login": {
       "2fa": "2FA",
       "login_btn": "Войти",
+      "messages": {
+        "error": "Ошибка входа в систему. Пожалуйста, проверьте введенные данные и попробуйте снова.",
+        "success": "Успешный вход в систему"
+      },
       "password": "Пароль",
       "remember_me": "Запомнить меня",
       "slogan": "Пожалуйста, войдите, чтобы начать работу",
@@ -38,11 +42,38 @@
   "navigation": {
     "home": "Главная",
     "user_info": {
-      "title": "Профиль",
-      "logout": "Выйти"
+      "logout": "Выйти",
+      "title": "Профиль"
     }
   },
+  "roles": {
+    "admin": "Администратор"
+  },
   "user_info": {
+    "main_info": {
+      "base_info": {
+        "fields": {
+          "email": "Email",
+          "name": "Имя"
+        },
+        "title": "Базовая Информацию"
+      },
+      "change_password": {
+        "fields": {
+          "confirm_password": "Подтвердите Пароль",
+          "new_password": "Новый Пароль",
+          "old_password": "Старый Пароль"
+        },
+        "title": "Изменение Пароля",
+        "update_button": "Обновить пароль"
+      },
+      "alerts": {
+        "password": {
+          "title": "Минимум 8 символов, заглавные буквы и символ",
+          "description": "Убедитесь, что выполняются требования к паролю"
+        }
+      }
+    },
     "tabs": {
       "main_info": "Основная информация",
       "tab1": "Вкладка 1"
