--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -41,16 +41,137 @@
   },
   "navigation": {
     "home": "Главная",
+    "projects": "Проекты",
     "user_info": {
       "logout": "Выйти",
       "title": "Профиль"
     }
   },
+  "projects": {
+    "actions": {
+      "create": "Создать проект",
+      "delete": "Удалить проект",
+      "edit": "Редактировать проект",
+      "export_srs": "Экспорт SRS",
+      "generate_mockups": "Сгенерировать макеты",
+      "generate_plan": "Сгенерировать план разработки",
+      "generate_requirements": "Сгенерировать требования",
+      "view": "Просмотр деталей"
+    },
+    "categories": {
+      "all": "Все категории",
+      "functional": "Функциональные",
+      "nonfunctional": "Нефункциональные",
+      "other": "Другие",
+      "uiux": "UI/UX"
+    },
+    "details": {
+      "additional_requirements": "Дополнительные требования",
+      "application_description": "Описание приложения",
+      "basic_info": "Основная информация",
+      "budget": "Бюджет",
+      "color_scheme": "Цветовая схема",
+      "created_at": "Создано",
+      "deadline": "Срок выполнения",
+      "language": "Язык",
+      "non_functional_requirements": "Нефункциональные требования",
+      "operating_system": "Операционная система",
+      "priority_modules": "Приоритетные модули",
+      "project_overview": "Обзор проекта",
+      "short_description": "Краткое описание",
+      "status": "Статус",
+      "target_users": "Целевая аудитория",
+      "technical_details": "Технические детали",
+      "technology_stack": "Технологический стек",
+      "type": "Тип",
+      "updated_at": "Обновлено"
+    },
+    "development_plan": {
+      "actions": {
+        "create_plan": "Создать план разработки",
+        "new_version": "Новая версия",
+        "set_current": "Сделать текущей"
+      },
+      "current_plan": "Текущий план разработки",
+      "empty": "Нет плана разработки",
+      "estimated_cost": "Расчетная стоимость",
+      "notes": "Примечания",
+      "roles_hours": "Распределение ролей и часов",
+      "version_history": "История версий"
+    },
+    "empty": "Проекты не найдены",
+    "filters": {
+      "search": "Поиск проектов...",
+      "sort_by": "Сортировать по",
+      "status": "Статус"
+    },
+    "mockups": {
+      "actions": {
+        "generate": "Сгенерировать макеты",
+        "view_html": "Просмотр HTML"
+      },
+      "empty": "Макеты не найдены",
+      "preview": "Предпросмотр"
+    },
+    "notifications": {
+      "created": "Проект успешно создан",
+      "deleted": "Проект успешно удален",
+      "error": "Произошла ошибка",
+      "requirements_generated": "Генерация требований началась",
+      "updated": "Проект успешно обновлен"
+    },
+    "requirements": {
+      "actions": {
+        "add": "Добавить требование",
+        "comment": "Добавить комментарий",
+        "delete": "Удалить требование",
+        "edit": "Редактировать требование",
+        "generate": "Сгенерировать требования"
+      },
+      "comments": "Комментарии",
+      "description": "Описание",
+      "empty": "Требования не найдены",
+      "history": "История",
+      "status": "Статус",
+      "title": "Заголовок"
+    },
+    "status": {
+      "active": "Активный",
+      "all": "Все статусы",
+      "archived": "Архивный",
+      "completed": "Завершенный",
+      "draft": "Черновик"
+    },
+    "tabs": {
+      "development_plan": "План разработки",
+      "mockups": "Макеты",
+      "overview": "Обзор",
+      "requirements": "Требования"
+    },
+    "title": "Проекты",
+    "types": {
+      "api": "API Сервис",
+      "desktop": "Десктоп приложение",
+      "mobile": "Мобильное приложение",
+      "other": "Другое",
+      "website": "Веб-сайт"
+    }
+  },
   "roles": {
-    "admin": "Администратор"
+    "admin": "Администратор",
+    "anonymous": "Анонимный",
+    "manager": "Менеджер",
+    "moderator": "Модератор",
+    "user": "Пользователь"
   },
   "user_info": {
     "main_info": {
+      "alerts": {
+        "password": {
+          "description": "Убедитесь, что выполняются требования к паролю",
+          "title": "Минимум 8 символов, заглавные буквы и символ"
+        }
+      },
       "base_info": {
         "fields": {
           "email": "Email",
@@ -66,12 +187,6 @@
         },
         "title": "Изменение Пароля",
         "update_button": "Обновить пароль"
-      },
-      "alerts": {
-        "password": {
-          "title": "Минимум 8 символов, заглавные буквы и символ",
-          "description": "Убедитесь, что выполняются требования к паролю"
-        }
       }
     },
     "tabs": {
@@ -79,5 +194,17 @@
       "tab1": "Вкладка 1"
     },
     "title": "Профиль"
+  },
+  "validation": {
+    "confirmed": "Пароли не совпадают",
+    "different": "{field} должен отличаться от {other}",
+    "email": "Пожалуйста, введите действительный адрес электронной почты",
+    "password": "Пароль должен содержать не менее 8 символов, включая заглавные, строчные буквы и специальные символы",
+    "regex": {
+      "default": "Пожалуйста, соответствуйте запрошенному формату",
+      "pattern": "шаблон"
+    },
+    "required": "Это поле обязательно для заполнения",
+    "unique": "{name} должен быть уникальным"
   }
 }
