--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -14,6 +14,10 @@
       "welcome": "Welcome!"
     }
   },
+  "confirmation": {
+    "confirm": "Confirm",
+    "cancel": "Cancel"
+  },
   "change_password": "Change Password",
   "data": {
     "empty": "No data",
@@ -147,6 +151,7 @@
       "other": "Other"
     },
     "details": {
+      "in_progress": "In Progress",
       "project_overview": "Project Overview",
       "created_at": "Created",
       "updated_at": "Updated",
@@ -275,7 +280,8 @@
       },
       "validation": {
         "name_required": "Name is required",
-        "html_required": "HTML content is required"
+        "html_required": "HTML content is required",
+        "feedback_required":"Feedback is required"
       },
       "notifications": {
         "updated": "Mockup updated successfully",
@@ -288,6 +294,18 @@
       },
       "delete_confirm": {
         "message": "Are you sure you want to delete this mockup? This action cannot be undone."
+      },
+      "regeneration": {
+        "title": "Regenerate Mockup",
+        "description": "This will use AI to regenerate this mockup based on your feedback and the associated requirement."
+      },
+      "fields": {
+        "user_story": "User Story",
+        "requirement": "Requirement",
+        "feedback": "Feedback for Regeneration"
+      },
+      "placeholders": {
+        "feedback": "Explain what you want to improve about this mockup..."
       }
     },
     "notifications": {
@@ -313,8 +331,8 @@
       "actions": {
         "add": "Add",
         "comment": "Add Comment",
-        "delete": "Delete Requirement",
-        "edit": "Edit Requirement",
+        "delete": "Delete",
+        "edit": "Edit",
         "generate": "Generate Requirements",
         "view_details": "View Details",
         "view_all_stories": "View All Stories",
@@ -335,7 +353,7 @@
           "title": "No Comments",
           "description": "Be the first to comment on this requirement"
         },
-        "unknown_user": "Unknown User"
+        "unknown_user": "System"
       },
       "description": "Description",
       "empty": {
@@ -350,7 +368,7 @@
           "description": "This requirement hasn't been modified yet"
         },
         "changed_by": "Changed by",
-        "unknown": "Unknown"
+        "unknown": "System"
       },
       "status": "Status",
       "title": "Title",
@@ -359,7 +377,14 @@
         "details": "Details",
         "user_stories": "User Stories",
         "history": "History",
-        "comments": "Comments"
+        "comments": "Comments",
+        "mockups": "Mockups"
+      },
+      "mockups":{
+        "empty":{
+          "title": "No Mockups",
+          "description": "Generate mockups for this requirement"
+        }
       },
       "types": {
         "feature": "Feature",
@@ -556,6 +581,12 @@
       "regeneration": {
         "title": "Regenerate User Story",
         "description": "This will use AI to regenerate this user story based on your feedback and the associated requirement."
+      },
+      "mockups":{
+        "empty":{
+          "title": "No Mockups",
+          "description": "Generate mockups for this user story"
+        }
       },
       "notifications": {
         "created": "User story created successfully",
