--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -14,6 +14,10 @@
       "welcome": "Добро пожаловать!"
     }
   },
+  "confirmation": {
+    "confirm": "Подтвердить",
+    "cancel": "Отмена"
+  },
   "change_password": "Изменить пароль",
   "data": {
     "empty": "Нет данных",
@@ -57,9 +61,9 @@
       "save": "Сохранить",
       "back": "Назад",
       "cancel": "Отмена",
-      "create": "Создать проект",
-      "delete": "Удалить проект",
-      "edit": "Редактировать проект",
+      "create": "Создать",
+      "delete": "Удалить",
+      "edit": "Редактировать",
       "export_srs": "Экспорт",
       "generate_mockups": "Сгенерировать макеты",
       "generate_plan": "Сгенерировать план разработки",
@@ -145,6 +149,7 @@
       "export_import": "Экспорт/Импорт"
     },
     "details": {
+      "in_progress": "В процессе",
       "project_overview": "Обзор проекта",
       "created_at": "Создано",
       "updated_at": "Обновлено",
@@ -273,7 +278,8 @@
       },
       "validation": {
         "name_required": "Требуется указать название",
-        "html_required": "Требуется указать HTML содержимое"
+        "html_required": "Требуется указать HTML содержимое",
+        "feedback_required": "Требуется указать отзыв для перегенерации"
       },
       "notifications": {
         "updated": "Макет успешно обновлен",
@@ -286,6 +292,18 @@
       },
       "delete_confirm": {
         "message": "Вы уверены, что хотите удалить этот макет? Это действие нельзя отменить."
+      },
+      "regeneration": {
+        "title": "Перегенерировать макет",
+        "description": "Это использует AI для перегенерации этого макета на основе вашего отзыва и связанного требования."
+      },
+      "fields": {
+        "user_story": "Пользовательская история",
+        "requirement": "Требование",
+        "feedback": "Отзыв для перегенерации"
+      },
+      "placeholders": {
+        "feedback": "Объясните, что вы хотите улучшить в этом макете..."
       }
     },
     "notifications": {
@@ -311,8 +329,8 @@
       "actions": {
         "add": "Добавить",
         "comment": "Добавить комментарий",
-        "delete": "Удалить требование",
-        "edit": "Редактировать требование",
+        "delete": "Удалить",
+        "edit": "Редактировать",
         "generate": "Сгенерировать требования",
         "view_details": "Просмотр деталей",
         "view_all_stories": "Просмотр всех историй",
@@ -331,7 +349,7 @@
           "title": "Нет комментариев",
           "description": "Будьте первым, кто прокомментирует это требование"
         },
-        "unknown_user": "Неизвестный пользователь"
+        "unknown_user": "Система"
       },
       "category": "Категория",
       "description": "Описание",
@@ -347,16 +365,23 @@
           "description": "Это требование еще не изменялось"
         },
         "changed_by": "Изменено пользователем",
-        "unknown": "Неизвестно"
+        "unknown": "Система"
       },
       "status": "Статус",
       "title": "Название",
       "type": "Тип",
+      "mockups":{
+        "empty":{
+          "title": "Нет макетов",
+          "description": "Сгенерируйте макеты для этого требования"
+        }
+      },
       "tabs": {
         "details": "Детали",
         "user_stories": "Пользовательские истории",
         "history": "История",
-        "comments": "Комментарии"
+        "comments": "Комментарии",
+        "mockups": "Макеты"
       },
       "types": {
         "feature": "Функциональность",
@@ -603,6 +628,12 @@
         "create": "Создание пользовательской истории",
         "edit": "Редактирование пользовательской истории",
         "details": "Детали пользовательской истории"
+      },
+      "mockups":{
+        "empty":{
+          "title": "Нет макетов",
+          "description": "Сгенерируйте макеты для этой пользовательской истории"
+        }
       },
       "fields": {
         "role": "Роль (Как...)",
