--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -61,8 +61,8 @@
       "save": "Save",
       "back": "Back",
       "cancel": "Cancel",
-      "create": "Create Project",
-      "delete": "Delete Project",
+      "create": "Create",
+      "delete": "Delete",
       "edit": "Edit Project",
       "export_srs": "Export",
       "generate_mockups": "Generate Mockups",
@@ -460,7 +460,7 @@
       "update_failed": "Failed to update project"
     },
     "delete_confirm": {
-      "title": "Delete Project",
+      "title": "Delete",
       "message": "Are you sure you want to delete this project? This action cannot be undone."
     },
     "uml_diagrams": {
