Multi-role update

--- a/src/plugins/i18n/locales/en.json
+++ b/src/plugins/i18n/locales/en.json
@@ -12,6 +12,22 @@
       "slogan": "Please login to start working",
       "username": "Username",
       "welcome": "Welcome!"
+    },
+    "register": {
+      "slogan": "Please register to start working",
+      "welcome": "Welcome!",
+      "messages": {
+        "error": "Registration failed. Please check your credentials and try again.",
+        "success": "Registration successful!"
+      },
+      "username": "Username",
+      "email": "Email",
+      "password": "Password",
+      "password_confirmation": "Confirm Password",
+      "first_name": "First Name",
+      "last_name": "Last Name",
+      "register_btn": "Register",
+      "already_have_account": "Already have an account? Login"
     }
   },
   "confirmation": {
@@ -58,6 +74,8 @@
       "german": "German"
     },
     "actions": {
+      "add": "Add",
+      "title": "Actions",
       "save": "Save",
       "back": "Back",
       "cancel": "Cancel",
@@ -186,6 +204,7 @@
     },
     "development_plan": {
       "actions": {
+        "add_role": "Add Role",
         "new_version": "Create New Plan Version",
         "create_version": "Create Version",
         "set_current": "Set as Current",
@@ -206,6 +225,8 @@
         "description": "This project does not have a development plan yet."
       },
       "version": {
+        "rate": "Rate",
+        "total": "Total",
         "current": "Current",
         "version": "Version",
         "created": "Created",
@@ -222,7 +243,8 @@
       "validation": {
         "estimated_cost_required": "Estimated cost is required",
         "estimated_cost_number": "Estimated cost must be a number",
-        "roles_hours_json": "Roles and hours must be valid JSON"
+        "roles_hours_json": "Roles and hours must be valid JSON",
+        "over_budget": "The estimated cost ({total}) of this version is over the preliminary budget of {budget}."
       },
       "notifications": {
         "created": "Development plan created successfully",
@@ -378,7 +400,8 @@
         "user_stories": "User Stories",
         "history": "History",
         "comments": "Comments",
-        "mockups": "Mockups"
+        "mockups": "Mockups",
+        "roles": "Roles"
       },
       "mockups":{
         "empty":{
@@ -614,6 +637,31 @@
         "created_at": "Created",
         "type": "Type",
         "language": "Language"
+      }
+    },
+    "roles": {
+      "actions": "Actions",
+      "user": "User",
+      "title": "Roles",
+      "no_members": "No members",
+      "email": "Email",
+      "add_member": "Add Member",
+      "delete_role": "Delete Role",
+      "edit_role": "Edit Role",
+      "delete_confirmation": "Are you sure you want to delete this role? This action cannot be undone.",
+      "role": "Role",
+      "role_types": {
+        "owner": "Owner",
+        "admin": "Admin",
+        "manager": "Manager",
+        "member": "Member",
+        "viewer": "Viewer"
+      },
+      "notifications": {
+        "role_updated": "Role updated successfully",
+        "role_added": "Role added successfully",
+        "role_delete_failed": "Failed to delete role",
+        "role_delete_confirmation": "Are you sure you want to delete this role? This action cannot be undone."
       }
     },
     "exports": {
