--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -11,7 +11,25 @@
       "remember_me": "Запомнить меня",
       "slogan": "Пожалуйста, войдите, чтобы начать работу",
       "username": "Имя пользователя",
-      "welcome": "Добро пожаловать!"
+      "welcome": "Добро пожаловать!",
+      "register": "Зарегистрироваться",
+      "no_account": "Нет аккаунта? Зарегистрироваться"
+    },
+    "register": {
+      "slogan": "Пожалуйста, зарегистрируйтесь, чтобы начать работу",
+      "welcome": "Добро пожаловать!",
+      "messages": {
+        "error": "Регистрация не удалась. Пожалуйста, проверьте введенные данные и попробуйте снова.",
+        "success": "Регистрация успешно завершена!"
+      },
+      "username": "Имя пользователя",
+      "email": "Email",
+      "password": "Пароль",
+      "password_confirmation": "Подтверждение пароля",
+      "first_name": "Имя",
+      "last_name": "Фамилия",
+      "register_btn": "Зарегистрироваться",
+      "already_have_account": "Уже есть аккаунт? Войти"
     }
   },
   "confirmation": {
@@ -58,6 +76,8 @@
       "german": "Немецкий"
     },
     "actions": {
+      "add": "Добавить",
+      "title": "Действия",
       "save": "Сохранить",
       "back": "Назад",
       "cancel": "Отмена",
@@ -184,6 +204,7 @@
     },
     "development_plan": {
       "actions": {
+        "add_role": "Добавить роль",
         "new_version": "Создать новую версию плана",
         "create_version": "Создать версию",
         "set_current": "Установить как текущую",
@@ -204,6 +225,8 @@
         "description": "У этого проекта пока нет плана разработки."
       },
       "version": {
+        "rate": "Ставка",
+        "total": "Всего",
         "current": "Текущая",
         "version": "Версия",
         "created": "Создано",
@@ -220,7 +243,8 @@
       "validation": {
         "estimated_cost_required": "Требуется указать ориентировочную стоимость",
         "estimated_cost_number": "Ориентировочная стоимость должна быть числом",
-        "roles_hours_json": "Роли и часы должны быть в формате JSON"
+        "roles_hours_json": "Роли и часы должны быть в формате JSON",
+        "over_budget": "Ориентировочная стоимость ({total}) превышает предварительный бюджет ({budget})."
       },
       "notifications": {
         "created": "План разработки успешно создан",
@@ -324,6 +348,31 @@
       "user_stories_generation_failed": "Не удалось запустить генерацию пользовательских историй",
       "uml_diagrams_generation_started": "Генерация UML-диаграмм успешно запущена",
       "uml_diagrams_generation_failed": "Не удалось запустить генерацию UML-диаграмм"
+    },
+    "roles": {
+      "actions": "Действия",
+      "user": "Пользователь",
+      "title": "Роли",
+      "no_members": "Нет участников",
+      "email": "Email",
+      "add_member": "Добавить участника",
+      "delete_role": "Удалить роль",
+      "edit_role": "Редактировать роль",
+      "delete_confirmation": "Вы уверены, что хотите удалить эту роль? Это действие нельзя отменить.",
+      "role": "Роль",
+      "role_types": {
+        "owner": "Владелец",
+        "admin": "Администратор",
+        "manager": "Менеджер",
+        "member": "Участник",
+        "viewer": "Наблюдатель"
+      },
+      "notifications": {
+        "role_updated": "Роль успешно обновлена",
+        "role_delete_failed": "Не удалось удалить роль",
+        "role_delete_confirmation": "Вы уверены, что хотите удалить эту роль? Это действие нельзя отменить.",
+        "role_added": "Роль успешно добавлена"
+      }
     },
     "requirements": {
       "actions": {
@@ -441,7 +490,8 @@
       "exports": "Выгрузки",
       "requirements": "Требования",
       "user_stories": "Пользовательские истории",
-      "uml_diagrams": "UML диаграммы"
+      "uml_diagrams": "UML диаграммы",
+      "roles": "Роли"
     },
     "title": "Проекты",
     "types": {
