--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -225,8 +225,8 @@
         "description": "У этого проекта пока нет плана разработки."
       },
       "version": {
-        "rate": "Ставка",
-        "total": "Всего",
+        "rate": "Ставка ($ / час)",
+        "total": "Всего ($)",
         "current": "Текущая",
         "version": "Версия",
         "created": "Создано",
@@ -238,7 +238,7 @@
         "no_versions": "Пока нет доступных версий.",
         "role": "Роль",
         "hours": "Часы",
-        "cost": "Стоимость"
+        "cost": "Стоимость ($)"
       },
       "validation": {
         "estimated_cost_required": "Требуется указать ориентировочную стоимость",
@@ -531,8 +531,10 @@
         "actions": "Действия"
       },
       "status": {
-        "active": "Активный",
+        "active": "Завершено",
+        "completed": "Завершено",
         "pending": "В ожидании",
+        "in_progress": "В процессе",
         "failed": "Ошибка"
       },
       "empty": "Экспорты не найдены"
